fixed child div class wrap

--- a/styles.css
+++ b/styles.css
@@ -1,36 +1,35 @@
 body {
-    background-color: lightgray;
     font-family: 'Times New Roman', Times, serif;
-    margin: 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
     padding: 0;
+    margin: 0;
+
+}
+
+#container {
+    display: flex;
+    flex-wrap: wrap;
+    margin: 0 0 16px 0;
+    padding: 0;
+    width: 640px;
+    height: 640px;
+    border: 1px solid black;
+    background-color: lightgray;
+
+}
+
+.child {
+    background-color: lightgray;
 }
 
 button {
     display: block;
     margin: auto;
-    background-color: white;
-}
-
-#container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    margin: 0 356px;
-    max-height: 800px;
-    min-height: 800px;
-    background-color: lightgray;
-
-}
-
-.parent {
-    display: flex;
-    flex-direction: row;
-
-}
-
-.child {
-    background-color: white;
-    width: 10px;
-    height: 10px;
+    padding: 8px;
+    border-width: 1px;
+    color: white;
+    background-color: rgb(28, 190, 7);
 }
